applications/platform/keycloak/instance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: case-platform-keycloak
  namespace: keycloak
spec:
  ingressClassName: apisix
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: case-platform-keycloak-service
                port:
                  number: 8080
